--- a/recipes/bakso-balung.html
+++ b/recipes/bakso-balung.html
@@ -22,7 +22,7 @@
     >
       <h1>Bakso Balung</h1>
       <img
-        src="/images/bakso-balung-babi.jpeg"
+        src="../images/bakso-balung-babi.jpeg"
         alt="Bakso Balung"
         style="max-width: 350px"
       />
