--- a/recipes/lawar-plek.html
+++ b/recipes/lawar-plek.html
@@ -22,7 +22,7 @@
     >
       <h1>Lawar Plek</h1>
       <img
-        src="/images/lawar-plek.jpg"
+        src="../images/lawar-plek.jpg"
         alt="Lawar Plek"
         style="max-width: 350px"
       />
