--- a/recipes/nasi-be-guling.html
+++ b/recipes/nasi-be-guling.html
@@ -22,7 +22,7 @@
     >
       <h1>Nasi Be Guling</h1>
       <img
-        src="/images/nasi-be-guling.jpg"
+        src="../images/nasi-be-guling.jpg"
         alt="Nasi Be Guling"
         style="max-width: 350px"
       />
